@@ -1,6 +1,23 @@
 <?php
 	/* $Id$ */
 	
+	final class PrimitiveCustomError extends PrimitiveString
+	{
+		const CUSTOM_MARK = 0xff;
+		
+		public function import($scope)
+		{
+			$this->customError = null;
+			
+			$result = parent::import($scope);
+			
+			if ($result === false)
+				$this->customError = self::CUSTOM_MARK;
+			
+			return $result;
+		}
+	}
+	
 	final class PrimitiveAliasTest extends TestCase
 	{
 		public function testImport()
@@ -18,6 +35,33 @@
 			$errors = $form->getErrors();
 			
 			$this->assertFalse(isset($errors['stringPrimitive']));
+		}
+		
+		public function testCustomError()
+		{
+			$realPrimitive = new PrimitiveCustomError('customError');
+			$realPrimitive->setMax(1);
+			
+			$form =
+				Form::create()->
+				add($realPrimitive)->
+				add(Primitive::alias('alias', $realPrimitive))->
+				import(array('alias' => 'Toooo long'));
+			
+			$errors = $form->getErrors();
+			
+			$this->assertTrue(isset($errors['alias']));
+			$this->assertEquals(PrimitiveCustomError::CUSTOM_MARK, $errors['alias']);
+			
+			$form->
+				clean()->
+				dropAllErrors()->
+				import(array('customError' => 'Toooo long'));
+			
+			$errors = $form->getErrors();
+			
+			$this->assertTrue(isset($errors['customError']));
+			$this->assertEquals(PrimitiveCustomError::CUSTOM_MARK, $errors['customError']);
 		}
 	}
 ?>
